# 1c_project

./: .gitignore  CMakeLists.txt  CloudApi.h  LICENSE  LocalFolder.cpp  LocalFolder.h  README.md  SyncManager.h  TODO.txt  main.cpp
.gitignore/: uml_behavior_1
include/: CloudApi.h  CloudSync.h  FileInfo.h  LocalFolder.h  SyncManager.h
src/: CloudApi.cpp  FileInfo.cpp  LocalFolder.cpp  SyncManager.cpp
tests/: CMakeLists.txt  test_cloudapi.cpp  test_fileinfo.cpp  test_localfolder.cpp  test_syncmanager.cpp
